<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="title_deck_detail">Deck Detail</string>
    <string name="title_activity_main">NetRunner Deck Builder</string>
    <string name="title_activity_deck">DeckActivity</string>
    <string name="title_activity_deck_info_fragment">DeckInfoFragment</string>
    <string name="title_activity_choose_identity">Choose identity</string>

    <!-- Various strings -->
    <string name="app_name">NetRunnerDeckBuilder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="deck_name">Deck Name</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="influence_char">&#8226;</string>
    <string name="influence_char_3">&#8226;&#8226;&#8226;</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_checked">Clear checked</string>
    <string name="cancel">Cancel</string>
    <string name="delete_deck">Delete Deck</string>
    <string name="clone_deck">Clone deck</string>
    <string name="copy_of">Copy of %1$s</string>
    <string name="view_fullscreen">View Fullscreen</string>
    <string name="total_number_of_decks">Total number of decks: </string>
    <string name="number_images_cached">Number of images cached: </string>
    <string name="download_all_images">Download all images</string>
    <string name="click_logo_to_open_drawer">Click the logo to open the drawer</string>
    <string name="view_cards_by_set">View cards by set</string>
    <string name="view_cards">View cards</string>
    <string name="deck_is_empty">Deck is empty</string>
    <string name="view_deck">View deck</string>
    <string name="new_deck">New Deck</string>
    <string name="corp">Corp</string>
    <string name="runner">Runner</string>
    <string name="my_decks">My Decks</string>
    <string name="display_all_data_packs">Display all data packs</string>
    <string name="data_packs_to_display">Data packs to display</string>
    <string name="data_packs_to_display_desc">Which data packs are displayed in MyCards</string>
    <string name="tap_to_close_card_preview">Tap to close card preview</string>
    <string name="cards">cards</string>
    <string name="please_wait">Please wait...</string>
    <string name="import_deck">Import Deck</string>
    <string name="search_hint">Search cards...</string>
    <string name="amount_of_core_decks">Amount of core decks</string>
    <string name="data_packs">Data Packs</string>
    <string name="gui">Interface</string>
    <string name="display_set_names_with_cards">Display set names with cards</string>
    <string name="new_hand">New Hand</string>
    <string name="draw">Draw</string>

    <!-- Drawer -->
    <string name="drawer_new_deck_runner">New Runner Deck</string>
    <string name="drawer_new_deck_corp">New Corp Deck</string>

    <!-- Messages -->
    <string name="downloading_cards">Downloading cards</string>
    <string name="downloading_cards_complete">Cards download completed</string>
    <string name="downloading_images">Downloading images</string>
    <string name="downloading_images_complete">Images download completed</string>
    <string name="downloading_images_amount" formatted="false">%d of %d downloaded</string>
    <string name="loading_cards">Loading cards</string>
    <string name="message_clear_all_cards">Are you sure you want to remove all cards?</string>
    <string name="message_clear_checked_cards">Are you sure you want to remove all checked cards?</string>
    <string name="message_delete_deck">Are you sure you want to delete this deck?</string>
    <string name="message_deck_deleted">Deck deleted successfuly</string>
    <string name="toast_deck_cloned_successfuly">Deck cloned successfuly. You are now viewing the cloned deck.</string>
    <string name="toast_require_one_datapack">You must select at least one data pack</string>
    <string name="download_all_images_question">Download size may be large (70M+). Are you sure you	want to download all images?</string>
    <string name="download_all_images_question_first_launch">Do you want to cache all images? You may download them later using the menu. Download size may be large (70M+).</string>
    <string name="error_downloading_cards">There was an error downloading the cards.</string>
    <string name="error_downloading_cards_quit">Could not download the initial cards list. Please connect to the internet and try again later.</string>

    <!-- Tabs -->
    <string name="tab_info">Info</string>
    <string name="tab_my_cards">My cards</string>
    <string name="tab_cards">Cards</string>
    <string name="tab_build">Build</string>
    <string name="tab_stats">Stats</string>
    <string name="tab_hand">Draw</string>

    <!-- Info Bar -->
    <string name="info_influence">Influence: </string>
    <string name="info_cards">Cards: </string>
    <string name="info_agenda">Agendas: </string>

    <!-- Deck Build -->
    <string name="build_cards_to_add">Cards to add</string>
    <string name="build_cards_to_remove">Cards to remove</string>

    <!-- Menu Items -->
    <string name="menu_about">About</string>
    <string name="menu_new_deck">New Deck</string>
    <string name="menu_refresh_cards">Update cards list</string>
    <string name="menu_change_identity">Change Identity</string>
    <string name="menu_search">Search</string>
    <string name="menu_options">Options</string>
    <string name="menu_share">Share</string>

    <!-- New Deck Fragment -->
    <string name="choose_your_side">Choose your side</string>

    <!-- Deck Cards Fragment -->
    <string name="my_cards">My Cards</string>
    <string name="title_activity_view_deck_fullscreen">ViewDeckFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- About page -->
    <string name="about_text">Images have been created by <a href="http://prisoner453.deviantart.com/art/Netrunner-Assets-351310060">prisoner453</a>.\n\nThe copyrightable portions of Android: Netrunner: The Card Game and its expansions are &#169; 2012&#8211;2013 Wizards &amp; Fantasy Flight Publishing, Inc. Netrunner is licensed by Wizards of the Coast LLC. Netrunner is a TM of R. Talsorian Games, Inc. Android, all Android: Netrunner: The Card Game expansion titles, Living Card Game, LCG, LCG logo and Fantasy Flight Supply are trademarks and/or registered trademarks of Fantasy Flight Publishing, Inc. All rights reserved to their respective owners.</string>
    <string name="title_activity_import_deck_from_net_runner_db">Import Deck</string>

    <string-array name="arr">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>
    <string-array name="arrAmountOfCoreDecks">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="arrEmpty" />

    <string name="title_activity_import_octgn">Import Deck</string>

</resources>