<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="Data Packs">
        
        
        
	    <ListPreference
	        android:key="pref_AmountOfCoreDecks"
	        android:title="@string/amount_of_core_decks"
	        android:entryValues="@array/arrAmountOfCoreDecks"
	        android:defaultValue="3"
	        android:entries="@array/arrAmountOfCoreDecks"/>
	    
	    <CheckBoxPreference
	        android:key="pref_DataPacksShowAll"
	        android:disableDependentsState="true"
	        android:defaultValue="true"
	        android:title="@string/display_all_data_packs" />
	    
	    <com.shuneault.netrunnerdeckbuilder.prefs.SetNamesPreferenceMultiSelect
	        android:key="pref_DataPacks"
	        android:dependency="pref_DataPacksShowAll"
	        android:title="@string/data_packs_to_display"
	        android:defaultValue="Core Set"
	        android:entries="@array/arr"
	        android:entryValues="@array/arr" />
	    
    
    </PreferenceCategory>
    

</PreferenceScreen>
